# lab2

./: meson.build
task1/: Grade.hpp  Set.hpp  Student.cpp  Student.hpp  main.cpp
task2/: main.cpp
